# espeak-ng

./: BETE_README.md  ChangeLog.md
android/: build.gradle
android/jni/: CMakeLists.txt
cmake/: data.cmake
dictsource/: bof_list  bof_rules
espeak-ng-data/lang/bnt/: bof
phsource/: ph_bof  ph_pashto  phonemes
src/libespeak-ng/: common.c  compiledict.c  dictionary.c  numbers.c  readclause.c  tr_languages.c  translate.c
tests/: language-bete.test  language-phonemes.test  language-pronunciation.test  translate.test
tests/ssml/: linking-j.expected  linking-j.ssml
